[gd_scene load_steps=17 format=2]

[ext_resource path="res://Knight.tscn" type="PackedScene" id=1]
[ext_resource path="res://DevTiles.tres" type="TileSet" id=2]
[ext_resource path="res://sword.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Background Music.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/keys.png" type="Texture" id=6]
[ext_resource path="res://Art/title.png" type="Texture" id=7]
[ext_resource path="res://Art/cloud.png" type="Texture" id=8]
[ext_resource path="res://Art/tree.png" type="Texture" id=9]
[ext_resource path="res://Art/hill.png" type="Texture" id=11]
[ext_resource path="res://Art/cavefront.png" type="Texture" id=12]
[ext_resource path="res://Art/caveback.png" type="Texture" id=13]
[ext_resource path="res://Art/scroll.png" type="Texture" id=14]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Quintessential-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 143, 522 )

[node name="Main" type="Node2D"]
position = Vector2( 0, 1.88776 )
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer2"]
margin_left = -170.0
margin_top = -479.112
margin_right = 4141.0
margin_bottom = 695.888
color = Color( 0.670588, 0.788235, 0.780392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 607.309, -20.8552 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 853.086, -70.484 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 432.23, -122.896 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )
flip_h = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 363.207, 409.644 )
rotation = -1.6453
scale = Vector2( 0.5, 1 )
texture = ExtResource( 11 )

[node name="Sprite11" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -140.879, 331.243 )
rotation = -1.6453
scale = Vector2( 0.741149, 1 )
texture = ExtResource( 11 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1779.21, 527.644 )
rotation = -1.21827
scale = Vector2( 0.5, 1 )
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1117.21, 349.644 )
rotation = -1.3684
scale = Vector2( 0.5, 1 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 805.207, 563.644 )
rotation = -1.6453
scale = Vector2( 0.5, 1 )
texture = ExtResource( 11 )

[node name="Sprite7" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 3263.21, 455.644 )
rotation = -1.6453
scale = Vector2( 0.5, 1 )
texture = ExtResource( 11 )

[node name="Sprite5" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 2287.25, 461.623 )
rotation = -1.6453
scale = Vector2( 0.5, 1 )
texture = ExtResource( 11 )

[node name="Sprite6" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 2766.35, 563.993 )
rotation = -1.53059
scale = Vector2( 0.5, 1 )
texture = ExtResource( 11 )

[node name="Sprite8" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 2118.96, 273.656 )
scale = Vector2( 0.564049, 0.649649 )
texture = ExtResource( 9 )
flip_h = true

[node name="Sprite9" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.776471, 0.921569, 0.921569, 1 )
position = Vector2( 1362, 275 )
scale = Vector2( 0.44756, 0.584548 )
texture = ExtResource( 9 )
flip_h = true

[node name="Sprite10" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.776471, 0.921569, 0.921569, 1 )
position = Vector2( 242, 298 )
scale = Vector2( 0.44756, 0.584548 )
texture = ExtResource( 9 )
flip_h = true

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 1030, 272 )
scale = Vector2( 0.712928, 0.738191 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
modulate = Color( 0.588235, 0.878431, 0.698039, 1 )
position = Vector2( 2669.63, 214.104 )
scale = Vector2( 0.645231, 0.666715 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 2206.44, 298.199 )
scale = Vector2( 0.594476, 0.583539 )
texture = ExtResource( 9 )

[node name="env" type="Node2D" parent="."]

[node name="TextureRect2" type="TextureRect" parent="env"]
margin_left = 153.0
margin_top = 31.1122
margin_right = 553.0
margin_bottom = 366.112
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="env/TextureRect2"]
margin_left = 170.0
margin_top = 248.0
margin_right = 249.0
margin_bottom = 289.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="env"]
visible = false
margin_left = 567.0
margin_top = 99.1122
margin_right = 967.0
margin_bottom = 434.112
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="env/TextureRect3"]
margin_left = 60.0
margin_top = 100.0
margin_right = 326.0
margin_bottom = 232.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.627451, 0.0941176, 0.0941176, 1 )
text = "Thus did the hero begin his quest..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="env/TextureRect3"]
position = Vector2( 199, 230 )
scale = Vector2( 0.157143, 0.157143 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 760, 360, 970, 420 )

[node name="TextureRect4" type="TextureRect" parent="env"]
margin_left = 1571.0
margin_top = 96.1122
margin_right = 1971.0
margin_bottom = 431.112
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="env/TextureRect4"]
margin_left = 31.0
margin_top = 48.0
margin_right = 297.0
margin_bottom = 99.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.627451, 0.0941176, 0.0941176, 1 )
meta_underlined = false
text = "He leapt merrily..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="env/TextureRect4"]
margin_left = 117.0
margin_top = 163.0
margin_right = 383.0
margin_bottom = 214.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.627451, 0.0941176, 0.0941176, 1 )
meta_underlined = false
text = "Very very merrily..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="env/TextureRect4"]
margin_left = 272.0
margin_top = 235.0
margin_right = 346.0
margin_bottom = 282.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.627451, 0.0941176, 0.0941176, 1 )
meta_underlined = false
text = "x2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="env/TextureRect4"]
position = Vector2( 86, 126 )
scale = Vector2( 0.157143, 0.157143 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 400, 20, 300, 330 )

[node name="Sprite3" type="Sprite" parent="env/TextureRect4"]
position = Vector2( 180, 125 )
scale = Vector2( 0.157143, 0.157143 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( -20, 370, 750, 250 )

[node name="Sprite4" type="Sprite" parent="env/TextureRect4"]
position = Vector2( 102.571, 244.929 )
scale = Vector2( 0.157143, 0.157143 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 400, 20, 300, 330 )

[node name="Sprite5" type="Sprite" parent="env/TextureRect4"]
position = Vector2( 196.571, 243.929 )
scale = Vector2( 0.157143, 0.157143 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( -20, 370, 750, 250 )

[node name="TextureRect5" type="TextureRect" parent="env"]
margin_left = 1109.0
margin_top = 90.1122
margin_right = 1509.0
margin_bottom = 425.112
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="env/TextureRect5"]
margin_left = 52.0
margin_top = 120.0
margin_right = 367.0
margin_bottom = 175.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.627451, 0.0941176, 0.0941176, 1 )
meta_underlined = false
text = "He did proceed with haste..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="env/TextureRect5"]
margin_left = 213.0
margin_top = 195.0
margin_right = 249.0
margin_bottom = 213.0
custom_colors/default_color = Color( 0.627451, 0.0941176, 0.0941176, 1 )
meta_underlined = false
text = "shift"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="env/TextureRect5"]
position = Vector2( 138.571, 203.929 )
scale = Vector2( 0.157143, 0.157143 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( -20, 50, 320, 330 )

[node name="TextureRect" type="TextureRect" parent="env"]
margin_left = 167.0
margin_top = 109.0
margin_right = 512.0
margin_bottom = 254.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite8" type="Sprite" parent="env"]
position = Vector2( 3642.25, 125.112 )
scale = Vector2( 0.597867, 0.634271 )
texture = ExtResource( 13 )

[node name="TileMap" type="TileMap" parent="env"]
tile_set = ExtResource( 2 )
collision_layer = 2
collision_mask = 5
format = 1
tile_data = PoolIntArray( -65536, 2, 0, 0, 2, 0, 65536, 2, 0, 131072, 2, 0, 196608, 2, 0, 262144, 2, 0, 262177, 1, 0, 327680, 2, 0, 327712, 1, 0, 327713, 1, 0, 393216, 2, 0, 393248, 1, 0, 393249, 1, 0, 458752, 2, 0, 458784, 1, 0, 458785, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 524326, 1, 0, 524327, 1, 0, 524328, 1, 0, 524329, 1, 0, 524330, 1, 0, 524331, 1, 0, 524332, 1, 0, 524333, 1, 0, 524334, 1, 0, 524335, 1, 0, 524336, 1, 0, 524337, 1, 0, 524338, 1, 0, 524339, 1, 0, 524340, 1, 0, 524341, 1, 0, 524342, 1, 0, 524343, 1, 0, 524344, 1, 0, 524345, 1, 0, 524346, 1, 0, 524347, 1, 0, 524348, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 589855, 1, 0, 589856, 1, 0, 589857, 1, 0, 589858, 1, 0, 589859, 1, 0, 589860, 1, 0, 589861, 1, 0, 589862, 1, 0, 589863, 1, 0, 589864, 1, 0, 589865, 1, 0, 589866, 1, 0, 589867, 1, 0, 589868, 1, 0, 589869, 1, 0, 589870, 1, 0, 589871, 1, 0, 589872, 1, 0, 589873, 1, 0, 589874, 1, 0, 589875, 1, 0, 589876, 1, 0, 589877, 1, 0, 589878, 1, 0, 589879, 1, 0, 589880, 1, 0, 589881, 1, 0, 589882, 1, 0, 589883, 1, 0, 589884, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 655390, 1, 0, 655391, 1, 0, 655392, 1, 0, 655393, 1, 0, 655394, 1, 0, 655395, 1, 0, 655396, 1, 0, 655397, 1, 0, 655398, 1, 0, 655399, 1, 0, 655400, 1, 0, 655401, 1, 0, 655402, 1, 0, 655403, 1, 0, 655404, 1, 0, 655405, 1, 0, 655406, 1, 0, 655407, 1, 0, 655408, 1, 0, 655409, 1, 0, 655410, 1, 0, 655411, 1, 0, 655412, 1, 0, 655413, 1, 0, 655414, 1, 0, 655415, 1, 0, 655416, 1, 0, 655417, 1, 0, 655418, 1, 0, 655419, 1, 0, 655420, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 720930, 1, 0, 720931, 1, 0, 720932, 1, 0, 720933, 1, 0, 720934, 1, 0, 720935, 1, 0, 720936, 1, 0, 720937, 1, 0, 720938, 1, 0, 720939, 1, 0, 720940, 1, 0, 720941, 1, 0, 720942, 1, 0, 720943, 1, 0, 720944, 1, 0, 720945, 1, 0, 720946, 1, 0, 720947, 1, 0, 720948, 1, 0, 720949, 1, 0, 720950, 1, 0, 720951, 1, 0, 720952, 1, 0, 720953, 1, 0, 720954, 1, 0, 720955, 1, 0, 720956, 1, 0 )

[node name="TextureRect4" type="TextureRect" parent="."]
margin_left = 2252.0
margin_top = 158.112
margin_right = 2652.0
margin_bottom = 493.112
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="TextureRect4"]
position = Vector2( 347, 285 )
rect = Rect2( -10, -10, 50, 20 )

[node name="RichTextLabel5" type="RichTextLabel" parent="TextureRect4"]
margin_left = 78.0
margin_top = 92.0
margin_right = 355.0
margin_bottom = 169.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.627451, 0.0941176, 0.0941176, 1 )
meta_underlined = false
text = "His blade was swift..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="TextureRect4"]
margin_left = 208.0
margin_top = 169.0
margin_right = 257.0
margin_bottom = 187.0
custom_colors/default_color = Color( 0.627451, 0.0941176, 0.0941176, 1 )
meta_underlined = false
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Enter"
}

[node name="Sprite3" type="Sprite" parent="TextureRect4"]
position = Vector2( 133.571, 177.929 )
scale = Vector2( 0.157143, 0.157143 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 830, 60, 290, 280 )
__meta__ = {
"_editor_description_": "Enter"
}

[node name="TextureRect5" type="TextureRect" parent="."]
visible = false
margin_left = 2254.0
margin_top = 161.112
margin_right = 2654.0
margin_bottom = 496.112
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel6" type="RichTextLabel" parent="TextureRect5"]
margin_left = 94.0
margin_top = 134.0
margin_right = 371.0
margin_bottom = 211.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.627451, 0.0941176, 0.0941176, 1 )
meta_underlined = false
text = "...Quite swift indeed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sword" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 0.11224 )
rotation = -0.0174554

[node name="Background Music" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 487, 423.112 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -93, 23 )
current = true
limit_left = 0
limit_top = -111
limit_right = 3915
limit_bottom = 634
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 15.0
offset_v = -0.56
drag_margin_left = 0.1
drag_margin_top = 0.55
drag_margin_right = 0.1
editor_draw_limits = true

[node name="Sprite9" type="Sprite" parent="."]
position = Vector2( 3906, 121.112 )
scale = Vector2( 0.597867, 0.634271 )
texture = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3865, 250.112 )
shape = SubResource( 3 )
[connection signal="button_down" from="env/TextureRect2/Button" to="." method="_on_Button_button_down"]
[connection signal="viewport_entered" from="TextureRect4/VisibilityNotifier2D" to="Player" method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="picked_up_sword" from="Sword" to="Player" method="_on_Sword_picked_up_sword"]
[connection signal="lost_sword" from="Player" to="Sword" method="_on_Player_lost_sword"]
[connection signal="lost_sword" from="Player" to="." method="_on_Player_lost_sword"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
